turtleart.diskfour.DiskFour.scala.error
Erreur de compilation :
DiskFour:5: error: not found: value RED
  setCouleur(RED)
             ^